moved directory and shop data into reducers, created respective selectors and updated corresponding component with new redux flow for directory/shop

--- a/src/components/collection-item/collection-item.style.scss
+++ b/src/components/collection-item/collection-item.style.scss
@@ -1,5 +1,5 @@
 .collection-item {
-  width: 22%;
+  width: 22vw;
 
 //sitie du leidzia footeriui ir image islikti vertikaliai lygiuoti
   display: flex;
